# comfyui-sunra

./: README.md  __init__.py  api_client.py  base_node.py  constants.py  pyproject.toml  requirements.txt  schema_to_node.py  sunra_nodes.py  type_converters.py
examples/: README.md  flux_image_editing.json  flux_text_to_image.json  seedance_video.json
js/: sunraExtension.js
schemas/: ace-step-v1-3.5b-text-to-music.json  black-forest-labs-flux-kontext-max-image-to-image.json  black-forest-labs-flux-kontext-max-text-to-image.json  bria-bria-remove-background-image-to-image.json  bria-bria-replace-background-image-to-image.json  doubao-seedance-1.0-lite-i2v-image-to-video.json  doubao-seedance-1.0-lite-t2v-text-to-video.json  doubao-seedream-3.0-text-to-image.json  elevenlabs-multilingual-v2-text-to-speech.json  elevenlabs-scribe-v1-speech-to-text.json  elevenlabs-sound-effects-text-to-sound-effects.json  elevenlabs-turbo-v2.5-text-to-speech.json  elevenlabs-voice-isolater-audio-isolation.json  flux-1.1-pro-image-to-image.json  flux-1.1-pro-text-to-image.json  flux-kontext-dev-image-to-image.json  flux-kontext-pro-image-to-image.json  flux-kontext-pro-text-to-image.json  flux.1-canny-pro-image-to-image.json  flux.1-depth-dev-image-to-image.json  flux.1-depth-pro-image-to-image.json  flux.1-fill-pro-image-to-image.json  google-deepmind-imagen3-fast-text-to-image.json  google-deepmind-imagen4-fast-text-to-image.json  google-deepmind-imagen4-text-to-image.json  google-deepmind-imagen4-ultra-text-to-image.json  google-deepmind-veo3-fast-text-to-video.json  (+70 more)
tools/: README.md  (+2 more)
(+4 files in other folders)
